# TimeSeriesForecaster

./: Dockerfile  Makefile  README.md  pyproject.toml
TimeSeriesApp/: pyproject.toml
TimeSeriesApp/forecaster_main/infrastructure/: io_data.py  logging.py
TimeSeriesApp/forecaster_main/predictor/: models.py  predictor_service.py
TimeSeriesApp/forecaster_main/ui/: app.py  forecaster_params.json
TimeSeriesApp/forecaster_main/visualize/: plot_service.py
TimeSeriesApp/forecaster_test/: daily_load_generator.py  data.csv  data.xlsx  io_data.py  pacf_vs_acf.py  predictor_with_real_models_research.py  sarimax.py  synthetic_series_5y.csv  test_analyse_series.py  test_arima212.py  test_arima212_anomaly.py  test_models.py  test_predictor_service.py  tps_finish.csv  tps_finish_multi.csv  week_max_5y.csv
